--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,18 +14,18 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: medias.svg
-          token: ${{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}}
+          token: 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
           base: ""
           config_order: anilist, music
           output_action: gist
-          committer_gist: ${{ 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 }}
+          committer_gist: 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
           plugin_anilist: yes
           plugin_anilist_medias: anime
           plugin_anilist_sections: favorites, characters
           plugin_anilist_limit: 2
           plugin_anilist_limit_characters: 22
           plugin_music: yes
-          plugin_music_playlist: ${{ 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 }}
+          plugin_music_playlist: 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
           plugin_music_limit: 9
 
       - name: 🦑 Achievements
@@ -33,10 +33,10 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: achievements.svg
-          token: ${{ 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 }}
+          token: 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
           base: ""
           output_action: gist
-          committer_gist: ${{ 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 }}
+          committer_gist: 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
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_fortune: yes
@@ -49,7 +49,7 @@ jobs:
           token: ${{ secrets.TOKEN }}
           base: ""
           output_action: gist
-          committer_gist: ${{ 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 }}
+          committer_gist: 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
           plugin_sponsors: yes
           plugin_sponsors_past: yes
 
@@ -58,12 +58,12 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: general.svg
-          token: ${{ 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 }}
+          token: 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
           base: header
           base_indepth: yes
           config_order: base.header, isocalendar, languages, notable, discussions, topics
           output_action: gist
-          committer_gist: ${{ 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 }}
+          committer_gist: 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
           plugin_isocalendar: yes
           plugin_languages: yes
           plugin_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, vue, scala, c, c++, python, ejs
