--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -76,7 +76,7 @@ inputs:
   # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
   committer_token:
     description: GitHub Token used to commit metrics
-    default:'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'
+    default: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
   
   # Branch used to commit rendered metrics
   committer_branch:
