--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,8 +1,8 @@
 name: Daily Commit
 
+
 on:
-  schedule:
-    - cron: '0 0 0 0 0' # Runs at midnight every day
+  workflow_dispatch:
 
 jobs:
   make_commit:
