--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,9 @@ name: Daily Commit
 
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *' # Runs at midnight every day
+
 
 jobs:
   make_commit:
